# cosmwasm-kv-contract

./: Cargo.toml
schema/: kv-store-contract.json
schema/raw/: execute.json  instantiate.json  query.json  response_to_value.json
src/: contract.rs  lib.rs  msg.rs  state.rs
tests/: contract_test.rs
